[tool.poetry]
name = "http-quest"
version = "0.1.0"
description = ""
authors = ["Vlad Dmitrievich <me@2tunnels.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.13.4"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.780"
safety = "^1.9.0"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
